# AnguishGL

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
CMake/: FindGLFW.cmake  FindGLM.cmake  FindLZ4.cmake  FindOpus.cmake  FindXXHASH.cmake
lib/: CMakeLists.txt
lib/include/anguish/core/: math.hpp  window.hpp
lib/include/anguish/gfx/: object.hpp  renderer.hpp
lib/include/anguish/gfx/mesh/: mesh.hpp  mesh_loader.hpp
lib/include/anguish/gfx/shader/: shader.hpp  shader_loader.hpp  shader_program.hpp
lib/include/anguish/gfx/texture/: texture.hpp  texture_loader.hpp
lib/include/glad/: gl.h
lib/src/: gl.c
lib/src/core/: math.cpp  window.cpp
lib/src/gfx/: object.cpp
lib/src/gfx/mesh/: mesh.cpp  mesh_loader.cpp
lib/src/gfx/shader/: shader.cpp  shader_program.cpp
lib/src/gfx/texture/: texture.cpp  texture_loader.cpp
sandbox/: CMakeLists.txt
sandbox/include/: basic_renderer.hpp  basic_shader.hpp  game_object.hpp
sandbox/resources/: basic.frag  basic.vert
sandbox/src/: basic_renderer.cpp  basic_shader.cpp  game_object.cpp  main.cpp
